Seperated Comparator for CandleCollection, organized imports, added new StatusCode class