@@ -7,7 +7,9 @@ import lombok.Setter;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -35,8 +37,9 @@ public class CandleCollection {
     /**
      * Modifies the list and filters all the candles between <code>from</code> and <code>to</code>.
      * If <code>from</code> is greater than <code>to</code> then the list is unaffected.
+     *
      * @param from <code>LocalDateTime</code> source
-     * @param to <code>LocalDateTime</code> end
+     * @param to   <code>LocalDateTime</code> end
      */
     @JsonIgnore
     public void filterBetween(LocalDateTime from, LocalDateTime to) {
@@ -44,6 +47,28 @@ public class CandleCollection {
 
         this.candles = this.candles.stream()
                 .filter(c -> !c.getDateTime().isBefore(from) && !c.getDateTime().isAfter(to))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Reverses the candleCollection in-place.
+     */
+    @JsonIgnore
+    public void reverseCollection() {
+        this.candles = this.candles.reversed();
+    }
+
+    /**
+     * Comparator to sort candles according to datetime in ASCENDING order.
+     *
+     * @return <code>Comparator<Candle></code>
+     */
+    @JsonIgnore
+    public static Comparator<Candle> candleComparator() {
+        return (candle1, candle2) -> {
+            if (candle1.getDateTime().isBefore(candle2.getDateTime())) return -1;
+            if (candle1.getDateTime().isAfter(candle2.getDateTime())) return 1;
+            return 0;
+        };
     }
 }
